testing/tests/ui/filter-recursion.stderr
error: problems parsing template source at row 1, column 46 near:
       ""
 --> tests/ui/filter-recursion.rs:3:10
  |
3 | #[derive(Template)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)
